# pytools-litho-design

./: .gitignore  .gitmodules  README.md  main.ipynb  pyproject.toml
example/: htron.ipynb  nanowire.ipynb
examples/: 01_drc.ipynb  02_modesolver_fem.ipynb  04_heater_fem.ipynb  05_mzi.ipynb  htron.ipynb  mesh.msh  nanowire.ipynb
examples/basics/: 00_geometry.ipynb  01_references.ipynb  03_cells_autoname_and_cache.ipynb  04_components_geometry.ipynb  04_components_hierarchy.ipynb  04_components_pack.ipynb  04_components_shapes.ipynb  04_routing.ipynb  04_routing_electrical.ipynb  07_mask.ipynb  08_pdk.ipynb  09_pdk_import.ipynb  10_schematic.ipynb  11_best_practices.ipynb  12_config.ipynb  12_grid_snapping.ipynb
gds_examples/: 10_layout_full.ipynb  21_modesolver_fdfd.ipynb  22_heater_fem.ipynb  31_ring.ipynb
src/pytools_litho_design/: __init__.py  cross_sections.py
src/pytools_litho_design/components/: __custom__init__.py  __init__.py  tapers.py
src/pytools_litho_design/components/bends/: __init__.py
src/pytools_litho_design/components/containers/: __init__.py
src/pytools_litho_design/components/couplers/: __init__.py  coupler.py  couplers.py  grating_arrays.py  grating_cluster.py  grating_clusters.py  grating_coupler.py  (+1 more)
src/pytools_litho_design/devices/: __init__.py  htron.py  snspd.py  snspds.py  tests.py
src/pytools_litho_design/experiments/: __init__.py  single_variable_sweep.py
src/pytools_litho_design/pdks/: __init__.py  imphys_pdk.py  loader.py
wip/components/: directional_couplers.py
wip/experiments/: alighnment.py  device_experiment.py  etching.py  grating_loss.py  resolution.py  vdp.py
(+40 files in other folders)
