[project]
name = "pytools_litho_design"
version = "0.0.3"
authors = [{ name = "Nynra", email = "nynradev@pm.me" }]
description = "Some usefull functions for mask design."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = ["matplotlib", "numpy", "gdsfactory"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: MIT License",
]
license = { text = "MIT License" }

[project.urls]
Homepage = "https://github.com/Nynra/pytools-lihto-design"
Issues = "https://github.com/Nynra/pytools-litho-design/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
